# agent-runtime-rs

./: .env.example  Cargo.toml  PHASE4_COMPLETION.md  README.md  TASK_ARTIFACT_LLM_CONFIG_FIX.md  TASK_ARTIFACT_RUST_PORTING.md  TASK_ARTIFACT_SKILL_TRIGGER_INTEGRATION.md  TASK_ARTIFACT_TOOL_REGISTRATION_FIX.md  home.html  index.html
agent-config/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
config/: agent-config.json  prompt-config.json  tools-config.json
docs/: INTEGRATION_GUIDE.md  TASK_ARTIFACT_AGENT_CONFIG_AUTOLOAD.md  TASK_ARTIFACT_MCP_INTEGRATION.md  TASK_ARTIFACT_SKILL_SYSTEM.md
examples/: basic_usage.rs
examples/agent-config/: AGENTS.md  IDENTITY.md  README.md  SOUL.md
skills/: frontend-design.md
skills/mvp-sysbuild/: SKILL.md
skills/mvp-sysbuild/references/: tech-stack-reference.md
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  skill_handlers.rs  types.rs
src/config/: loader.rs  types.rs
src/llm/: client.rs  connector.rs  mod.rs  types.rs
src/mcp/: client.rs  config.rs  mod.rs  stdio_client.rs  types.rs
src/runtime/: agent.rs  mod.rs  types.rs
src/session/: manager.rs  mod.rs  persistence.rs  types.rs
src/skill/: mod.rs  types.rs
src/skills/: loader.rs  mod.rs  reference_tool.rs  types.rs
src/tools/: manager.rs  mod.rs  types.rs
src/tools/builtin/: calculator.rs  directory_creator.rs  file_deleter.rs  file_editor.rs  file_lister.rs  file_reader.rs  file_writer.rs  get_current_time.rs  mod.rs  (+1 more)
src/utils/: logger.rs
tests/: llm_integration_test.rs
